--- a/react_app/src/Main.css
+++ b/react_app/src/Main.css
@@ -1,12 +1,14 @@
-#root,
 body {
-  overflow: hidden;
   width   : 100vw;
   height  : 100vh;
   margin  : 0;
 
   font-size  : 20px;
   font-family: Helvetica;
+}
+#root {
+  width: 100%;
+  height: 100%;
 }
 
 button {
