--- a/react_app/src/components/Header/Header.module.scss
+++ b/react_app/src/components/Header/Header.module.scss
@@ -1,13 +1,11 @@
 .main {
-    position        : relative;
     grid-row        : 1;
     
-    top             : 0;
     display         : flex;
-    align-items     : center;
-    justify-content : space-between;
     height          : 30px;
     width           : 100%;
+    align-items     : center;
+    justify-content : space-between;
     background-color: cadetblue;
     padding-right   : 20px;
     box-sizing      : border-box;
