--- a/react_app/src/pages/ChatWindow/Mobile.module.scss
+++ b/react_app/src/pages/ChatWindow/Mobile.module.scss
@@ -1,13 +1,16 @@
 .chat {
     display           : grid;
-    grid-template-rows: 1fr max-content;
+    grid-template-rows: 1fr max-content 8px;
 
     width : 100%;
     height: 100%;
 
     .messages {
-        grid-row  : 1;
-        overflow-y: auto;
+        grid-row: 1;
+
+        display       : flex;
+        flex-direction: column;
+        overflow-y    : scroll;
 
         padding  : 10px;
         word-wrap: break-word;
@@ -24,8 +27,9 @@
 
     .input {
         grid-row             : 2;
-        width                : 100%;
+
         display              : grid;
+        width                : 100%;
         grid-template-columns: 1fr 24px;
 
         background-color: white;
@@ -53,7 +57,7 @@
     }
 
     .downBorder {
-        height          : 12px;
+        grid-row        : 3;
         background-color: cadetblue;
     }
 }
